--- a/.editorconfig
+++ b/.editorconfig
@@ -9,3 +9,17 @@ insert_final_newline = false
 
 [*.json]
 indent_size = 2
+
+[*.yaml]
+indent_size = 2
+
+[*.yml]
+indent_size = 2
+
+[*.xml]
+indent_size = 2
+max_line_length = 1000
+
+# https://github.com/Dreamscapes/makefiles/blob/master/.editorconfig
+[{Makefile, **.mk}]
+indent_style = tab
