--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,10 @@
 {
-    "python.pythonPath": "/usr/bin/python",
-    "python.languageServer": "Pylance",
     "python.analysis.extraPaths": [
         "/usr/lib/ambari-agent/lib",
         "/usr/lib/ambari-agent/lib/resource_management",
         "/usr/lib/ambari-agent/lib/resource_management/libraries",
         "/mnt/home/admin/zone/ElasticAmbari/elastic-service-mpack/common-services/ELASTICSEARCH/7.9.2/package/scripts"
     ],
-    "editor.fontSize": 16,
-    "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace",
-    "workbench.editor.enablePreview": false
+    "python.languageServer": "Pylance",
+    "python.pythonPath": "/usr/bin/python"
 }
