--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
         "/mnt/home/admin/zone/ElasticAmbari/elastic-service-mpack/common-services/ELASTICSEARCH/7.9.2/package/scripts"
     ],
     "python.languageServer": "Pylance",
-    "python.pythonPath": "/usr/bin/python"
+    "python.pythonPath": "/usr/bin/python",
+    "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace"
 }
