--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,5 +7,6 @@
     ],
     "python.languageServer": "Pylance",
     "python.pythonPath": "/usr/bin/python",
-    "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace"
+    "editor.fontFamily": "Monaco, Menlo, 'Courier New', monospace",
+    "editor.fontSize": 16
 }
